<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="80dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Posts By User Id -->
        <LinearLayout
            android:id="@+id/linear_userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <!-- TODO: Change Radius -->
            <TextView
                android:id="@+id/tv_showposts_byuserid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/linear_background"
                android:padding="20dp"
                android:text="@string/tvUserId"
                android:textAlignment="center"
                android:textColor="@color/linear_text_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_getposts_byuserid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_posts_setUserId"
                android:inputType="number"
                android:maxLines="2"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_getposts_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_getUserId"
                android:visibility="gone" />
        </LinearLayout>
        <!-- Comments By PostId-->
        <LinearLayout
            android:id="@+id/linear_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_userID"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_getcomments_bypostid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/linear_background"
                android:padding="20sp"
                android:text="@string/tv_comments_postId"
                android:textAlignment="center"
                android:textColor="@color/linear_text_background"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_getcomments_bypostid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_Comments_setPostId"
                android:inputType="number"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_getComments_bypostid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_getComments"
                android:visibility="gone" />

        </LinearLayout>
        <!-- Photos By AlbumId-->
        <LinearLayout
            android:id="@+id/linear_Photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_comments"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_showphotos_byalbumid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/linear_background"
                android:padding="20dp"
                android:text="@string/tvShowAlbumId"
                android:textAlignment="center"
                android:textColor="@color/linear_text_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_getphotos_setalbumid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_photos_setAlbumId"
                android:inputType="number"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_getphotos_byalbumid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_getAlbumId"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Albums By UserId -->
        <LinearLayout
            android:id="@+id/linear_userAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_Photos"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_showalbums_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/linear_background"
                android:padding="20dp"
                android:text="@string/tvShowUserAlbums"
                android:textAlignment="center"
                android:textColor="@color/linear_text_background"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_getalbums_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_albums_setUserId"
                android:inputType="number"
                android:maxLines="2"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_getalbums_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_getUserAlbum"
                android:visibility="gone" />

        </LinearLayout>

        <!-- TODOs By UserId -->
        <LinearLayout
            android:id="@+id/linear_userTODOs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_userAlbum"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_showtodos_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/linear_background"
                android:padding="20dp"
                android:text="@string/tv_todos_by_userid"
                android:textAlignment="center"
                android:textColor="@color/linear_text_background"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_gettodos_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_todos_by_userid"
                android:inputType="number"
                android:maxLines="2"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_gettodos_byuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_get_todos"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>